Cleanup and restructing. Will on on repsy soon.